hphp/test/zend/bad/ext/mysql/tests/mysql_max_persistent.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
require_once('table.inc');

mysql_query('DROP USER pcontest', $link);
if (!mysql_query('CREATE USER pcontest IDENTIFIED BY "pcontest"', $link)) {
	printf("skip Cannot create second DB user [%d] %s", mysql_errno($link), mysql_error($link));
	mysql_close($link);
	die();
}

// we might be able to specify the host using CURRENT_USER(), but...
if (!mysql_query(sprintf("GRANT SELECT ON TABLE %s.test TO pcontest@'%%'", $db), $link)) {
	printf("skip Cannot GRANT SELECT to second DB user [%d] %s", mysql_errno($link), mysql_error($link));
	mysql_query('REVOKE ALL PRIVILEGES, GRANT OPTION FROM pcontest', $link);
	mysql_query('DROP USER pcontest', $link);
	mysql_close($link);
	die();
}
mysql_close($link);
?>